--- a/tes.html
+++ b/tes.html
@@ -4,20 +4,20 @@
     </head>
 
     <body style="odkdk" style="pkok">
-        <img src=" " >
-        <h1>
-
+        <h1
+            <img src="aokaokaok" id="okok" style="okoko" alt="kjjjo">
         </h1>
         <b>
 
         </b>
-        <abbr>
+        <abbr
             <button></button>
         </abbr>
         <strong>
 
         </strong>
         <small>
+        
 
         </small>
         <hr>
