--- a/tes.html
+++ b/tes.html
@@ -1,5 +1,15 @@
 <html>
     <head>
+        <title class="loksok" id=" " style="oaoaoao"></title>
+        <script></script>
     </head>
-    
+    <body>
+        <h1></h1>
+        <script></script>
+        <table>
+            <tr>
+            </tr>
+        </table>
+        <h2></h2>
+    </body>
 </html>
