fix: button, br & b token

--- a/tes.html
+++ b/tes.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <h1></h1>
+        <button></button>
+        <button></button>
+        <b></b>
+        <b></b>
         <script></script>
         <table>
             <tr>
