feat: void elmt+atribut

--- a/tes.html
+++ b/tes.html
@@ -1,15 +1,18 @@
 <html>
     <head>
-        <title class="loksok" id=" " style="oaoaoao"></title>
-        <script></script>
+        <title class="loksok" id="kkkk" style="oaoaoao"></title>
+        <script src="ioo"></script>
     </head>
     <body>
         <h1></h1>
+        <button type="reset" class="oko"></button>
         <button></button>
-        <button></button>
+        <link class="ooo" id="jiiji" rel="stylesheet">
         <b></b>
         <b></b>
-        <script></script>
+        <script src="okoko"></script>
+        <img src="koka" alt=" ">
+        <br class="okok">
         <table>
             <tr>
             </tr>
