--- a/tes.html
+++ b/tes.html
@@ -1,10 +1,22 @@
 <html>ada asdaa 767656757 hggfhpg]];/;ll.[@#$%^&*]
-    <head>
-        <title class="loksok" id="kkkk" style="oaoaoao"></title>
+    <!-- ijiji--> 
+    <head class="kokok">
+        <title class="loksok" id="kkkk" style="oaoaoao">
+        <small></small>
+        <strong></strong>
+        <em></em>
+        <!-- lkdskka
+        
+        -->
+        </title>
         <script src="ioo"></script>
     </head>
+    <!-- inininini -->
     <body>
         <h1></h1>
+        <h2>sadad dsfsdfdfs</h2>
+        <h3></h3>
+        <p>vdvd<br>dffvd</p>
         <button type="reset" class="oko"></button>
         <button></button>
         <link class="ooo" id="jiiji" rel="stylesheet">
@@ -19,4 +31,6 @@
         </table>
         <h2></h2>
     </body>
+    <!-- ijiij -->
 </html>
+<!-- ijijijij -->
