--- a/tes.html
+++ b/tes.html
@@ -24,7 +24,7 @@
         <b></b>
         <b></b>
         <script src="okoko"></script>
-        <img src="koka" alt=" ">
+        <img src="./welcome.jpeg">
         <br class="okok">
         <table>
             <tr>
