--- a/test/tes.html
+++ b/test/tes.html
@@ -1,5 +1,5 @@
 <!-- ojojdaojadojad -->
-<html>ada asdaa 767656757 hggfhpg]];/;ll.[@#$%^&*]
+<html>
     <!-- ijiji--> 
     <head class="kokok">
         <title class="loksok" id="kkkk" style="oaoaoao">
